# bst-website

./: .gitignore  AMENDMENT_PREVENTION.md  DESIGN.md  Dockerfile.ctrepo  LICENSE  PLATFORM_SUMMARY.md  README.md  SETUP.md  bastion.yaml  docker-compose.yml  package-lock.json  package.json  postcss.config.mjs  pyproject.toml  requirements.txt  setup.py  tailwind.config.ts
app/: layout.tsx  not-found.tsx  page.tsx
bastion/: package-lock.json
bst/: __init__.py  __main__.py  cli.py  ctrepo_server.py  transpiler.py
components/: aurora-background.tsx  connector-status.tsx  cta-section.tsx  hero-section.tsx  life-days-ticker.tsx  navigation.tsx  performance-badge.tsx
components/ui/: badge.tsx
data/: synthetic-controls-1754155234.parquet  synthetic-controls-1754155291.parquet  synthetic-controls-1754155320.parquet  synthetic-controls-1754155375.parquet  synthetic-controls-1754158675.parquet
examples/: amendment_prevention.yaml  failing_protocol.yaml
hooks/: validate_protocol.py
output/: ctp-abc123_harness.py
protocol/: demo_protocol.yaml  enhanced_trial.yaml  example_protocol.yaml  test_protocol.yaml
schemas/: protocol.schema.json
scripts/: precommit.sh  setup-git-hooks.sh
tests/: test_cli.py
web/: FRONTEND_GUIDE.md  GITHUB_PLATFORM_GUIDE.md  PRODUCTION_READINESS_ASSESSMENT.md  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout-wrapper.tsx  layout.tsx  page.tsx
web/components/: audit-trail.tsx  comment-gutter.tsx  dag-graph.tsx  diversity-radar.tsx  enrollment-tracker.tsx  (+14 more)
workflows/: protocol-ci.yml  validate.yaml
(+31 files in other folders)
